--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://formsubmit.co/el/zisiki" method="POST">
+    <form action="https://formsubmit.co/gerald_encabo@yahoo.com" method="POST">
         <input type="hidden" name="_autoresponse" value="Yes">
         <input type="hidden" name="_captcha" value="false">
         <input type="text" name="name">
