--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <form action="https://formsubmit.co/gerald_encabo@yahoo.com" method="POST">
         <input type="hidden" name="_autoresponse" value="Yes">
-        <input type="hidden" name="_captcha" value="false">
+        <!--<input type="hidden" name="_captcha" value="false">-->
         <input type="text" name="name">
         <input type="email" name="email" placeholder="Email Address" required>
         <button type="submit">Send</button>
