--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="https://formsubmit.co/gerald_encabo@yahoo.com" method="POST">
-        <input type="hidden" name="_autoresponse" value="&quot;Hi,<br>Thanks for the message, and I'll respond to your email as soon as I can. <br> Regards, <br>Gerald Encabo&quot;">
+        <input type="hidden" name="_autoresponse" value="Thanks for the message. I'll respond to your email as soon as I can. - Gerald Encabo">
         <!--<input type="hidden" name="_captcha" value="false">-->
         <input type="text" name="name">
         <input type="email" name="email" placeholder="Email Address" required>
